# mnemosyne.rs

./: Cargo.toml
.github/workflows/: main.yml  pr.yml  release.yml  version.yml
