[package]
name = "mnemosyne-rs"
version = "0.0.2"
description = "Distributed process deduplication with best-effort exactly-once semantics using DynamoDB"
readme = "README.md"
repository = "https://github.com/filosganga/mnemosyne-rs"
homepage = "https://github.com/filosganga/mnemosyne-rs"
documentation = "https://docs.rs/mnemosyne-rs"
keywords = ["deduplication", "dynamodb", "distributed", "idempotency", "at-least-once"]
categories = ["asynchronous", "database"]
exclude = ["flake.nix", "flake.lock", "docker-compose.yml", ".envrc", "justfile", "CONTRIBUTING.md"]

edition = "2021"

license = "Apache-2.0"
authors = ["Filippo De Luca", "Filippo De Luca <me@filippodeluca.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.99"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }